--- a/client/src/pages/Pages.css
+++ b/client/src/pages/Pages.css
@@ -9,7 +9,7 @@
 
 .m {
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
 
 .mm {
@@ -287,4 +287,13 @@ button.excluir {
   border-radius: 0.3rem;
   cursor: pointer;
   font-weight: bold;
+}
+
+.link-conta{
+  margin-bottom: 5rem;
+}
+
+.check{
+  width: 1rem;
+  height: 1rem;
 }
